test/acceptance/validating/failing/type-without-query-without-find.spun
get "http://google.com"
type "asdf"
